// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source builtInVars.4gl 1`] = `
main

    let x, y = arg_val
    let x, y = arr_count
    let x, y = arr_cur
    let x, y = sqlca
    
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`Source empty_main.4gl 1`] = `
main

end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`Source globals.4gl 1`] = `
globals "abc.txt"

globals
DEFINE NOME CHAR(50) # abc
end globals

main

end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`Source strings.4gl 1`] = `
main

    let x, y = ''
    let x, y = 'ABC,DEF'
    let x, y = '"'
    let x, y = 'ABC\\'DEF'
    
end main

function f1()

    let x, y = ""
    let x, y = "ABC,DEF"
    let x, y = "'"
    let x, y = "ABC\\"DEF"
    
end function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;
